--- a/custom.css
+++ b/custom.css
@@ -5,6 +5,6 @@
     background: #ebecf2;
 }
 .sudo-img{
-    background: url("sudo.svg) 32px 32px no-repeat;
+    background-image: url("sudo.svg");
     
 }
